--- a/form-three.html
+++ b/form-three.html
@@ -1,170 +1,170 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./vendor/bootstrap/css/bootstrap.min.css">
-    <link rel="stylesheet" href="./vendor/fontawesome//font-awesome-4.7.0/css/font-awesome.min.css">
-    <link rel="stylesheet" href="./css/index.css">
-    <title>Form Three</title>
-  </head>
-<body>
-   <!--Navbar start -->
-   <section>
-    <nav class="navbar navbar-light bg_color shadow">
-      <div class="container">
-        <p class="mx-auto project_name">Hospital Name</p>
-      </div>
-    </nav>
-  </section>
-<!-- Navbar end -->
-<!-- Page Content -->
-    <section class="bg_body pt-3 pb-5 px-5">
-            <div class="container-fluid mb-3"> 
-              <div class="row bg_form" >
-                <div class="col-md-12" >
-                  <form class="table_th mt-3">
-                    <table class="table ">
-                      <thead>
-                        <tr>
-                          <td>Patient name:</td>
-                          <th>
-                            <!-- <input type="text"> -->
-                          </th>
-                          <td scope="col">Patient ID:</td>
-                          <th scope="col">
-                            <!-- <input type="text"> -->
-                          </th>
-                        </tr>
-                      </thead>
-                      <tbody>
-                        <tr>
-                          <td scope="row">Patient Age:</td>
-                          <td>
-                            <!-- <input type="text"> -->
-                          </td>
-                          <td >Mobile number:</td>
-                          <td>
-                            <!-- <input type="text"> -->
-                          </td>
-                        </tr>
-                        <tr>
-                          <td scope="row">Gender:</td>
-                          <td>
-                            <!-- <input type="text"> -->
-                          </td>
-                          <td>Consultant name:</td>
-                          <td>
-                            <!-- <input type="text"> -->
-                          </td>
-                        </tr>
-                      </tbody>
-                    </table>
-                  </form>
+    <head>
+        <meta charset="UTF-8" />
+        <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <link rel="stylesheet" href="./vendor/bootstrap/css/bootstrap.min.css" />
+        <link rel="stylesheet" href="./vendor/fontawesome//font-awesome-4.7.0/css/font-awesome.min.css" />
+        <link rel="stylesheet" href="./css/index.css" />
+        <title>Form Three</title>
+    </head>
+    <body>
+        <!--Navbar start -->
+        <section>
+            <nav class="navbar navbar-light bg_color shadow">
+                <div class="container">
+                    <p class="mx-auto project_name">Hospital Name</p>
                 </div>
-              </div>
+            </nav>
+        </section>
+        <!-- Navbar end -->
+        <!-- Page Content -->
+        <section class="bg_body pt-3 pb-5 px-5">
+            <div class="container-fluid mb-3">
+                <div class="row bg_form">
+                    <div class="col-md-12">
+                        <form class="table_th mt-3">
+                            <table class="table">
+                                <thead>
+                                    <tr>
+                                        <td>Patient name:</td>
+                                        <th>
+                                            <!-- <input type="text"> -->
+                                        </th>
+                                        <td scope="col">Patient ID:</td>
+                                        <th scope="col">
+                                            <!-- <input type="text"> -->
+                                        </th>
+                                    </tr>
+                                </thead>
+                                <tbody>
+                                    <tr>
+                                        <td scope="row">Patient Age:</td>
+                                        <td>
+                                            <!-- <input type="text"> -->
+                                        </td>
+                                        <td>Mobile number:</td>
+                                        <td>
+                                            <!-- <input type="text"> -->
+                                        </td>
+                                    </tr>
+                                    <tr>
+                                        <td scope="row">Gender:</td>
+                                        <td>
+                                            <!-- <input type="text"> -->
+                                        </td>
+                                        <td>Consultant name:</td>
+                                        <td>
+                                            <!-- <input type="text"> -->
+                                        </td>
+                                    </tr>
+                                </tbody>
+                            </table>
+                        </form>
+                    </div>
+                </div>
             </div>
             <!--end of form-->
             <div class="bg_form p-3">
                 <h4 title="Biochemist Analyzer Report" class="text-center mt-2 mb-3">Biochemist Analyzer Report</h4>
                 <!--first table start-->
                 <table class="table result">
-                  <thead class="thead-light">
-                    <tr>
-                      <th scope="col">Test</th>
-                      <th scope="col">Result</th>
-                      <th scope="col">Unit</th>
-                      <th scope="col">Normal Range</th>
-                    </tr>
-                  </thead>
-                  <tbody>
-                    <tr>
-                      <td>
-                        White blood cells
-                      </td>
-                      <td>
-                        1.90
-                      </td>
-                      <td>K/uL</td>
-                      <td>4.5 - 11.5</td>
-                    </tr>
-                    <tr>
-                      <td>
-                        White blood cells
-                      </td>
-                      <td>1.90</td>
-                      <td>K/uL</td>
-                      <td>4.5 - 11.5</td>
-                    </tr>
-                    <tr>
-                      <td>
-                        White blood cells
-                      </td>
-                      <td>1.90</td>
-                      <td>K/uL</td>
-                      <td>4.5 - 11.5</td>
-                    </tr>
-                    <tr>
-                      <td>
-                        White blood cells
-                      </td>
-                      <td>1.90</td>
-                      <td>K/uL</td>
-                      <td>4.5 - 11.5</td>
-                    </tr>
-                  </tbody>
+                    <thead class="thead-light">
+                        <tr>
+                            <th scope="col">Test</th>
+                            <th scope="col">Result</th>
+                            <th scope="col">Unit</th>
+                            <th scope="col">Normal Range</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr>
+                            <td>
+                                White blood cells
+                            </td>
+                            <td>
+                                1.90
+                            </td>
+                            <td>K/uL</td>
+                            <td>4.5 - 11.5</td>
+                        </tr>
+                        <tr>
+                            <td>
+                                White blood cells
+                            </td>
+                            <td>1.90</td>
+                            <td>K/uL</td>
+                            <td>4.5 - 11.5</td>
+                        </tr>
+                        <tr>
+                            <td>
+                                White blood cells
+                            </td>
+                            <td>1.90</td>
+                            <td>K/uL</td>
+                            <td>4.5 - 11.5</td>
+                        </tr>
+                        <tr>
+                            <td>
+                                White blood cells
+                            </td>
+                            <td>1.90</td>
+                            <td>K/uL</td>
+                            <td>4.5 - 11.5</td>
+                        </tr>
+                    </tbody>
                 </table>
                 <!--end of first table-->
             </div>
             <!--second table start-->
             <div class="bg_form p-3">
-                <h4 class="text-center mb-3">Blood Examination Report</h4>
+                <h4 title="Blood Examination Report" class="text-center mb-3">Blood Examination Report</h4>
                 <table class="table result">
-                  <thead class="thead-light">
-                    <tr>
-                      <th scope="col">Test</th>
-                      <th scope="col">Result</th>
-                      <th scope="col">Unit</th>
-                      <th scope="col">Normal Range</th>
-                    </tr>
-                  </thead>
-                  <tbody>
-                    <tr>
-                      <td>
-                        White blood cells
-                      </td>
-                      <td>
-                        1.90
-                      </td>
-                      <td>K/uL</td>
-                      <td>4.5 - 11.5</td>
-                    </tr>
-                    <tr>
-                      <td>
-                        White blood cells
-                      </td>
-                      <td>1.90</td>
-                      <td>K/uL</td>
-                      <td>4.5 - 11.5</td>
-                    </tr>
-                    <tr>
-                      <td>
-                        White blood cells
-                      </td>
-                      <td>1.90</td>
-                      <td>K/uL</td>
-                      <td>4.5 - 11.5</td>
-                    </tr>
-                    <tr>
-                      <td>
-                        White blood cells
-                      </td>
-                      <td>1.90</td>
-                      <td>K/uL</td>
-                      <td>4.5 - 11.5</td>
-                    </tr>
-                  </tbody>
+                    <thead class="thead-light">
+                        <tr>
+                            <th scope="col">Test</th>
+                            <th scope="col">Result</th>
+                            <th scope="col">Unit</th>
+                            <th scope="col">Normal Range</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr>
+                            <td>
+                                White blood cells
+                            </td>
+                            <td>
+                                1.90
+                            </td>
+                            <td>K/uL</td>
+                            <td>4.5 - 11.5</td>
+                        </tr>
+                        <tr>
+                            <td>
+                                White blood cells
+                            </td>
+                            <td>1.90</td>
+                            <td>K/uL</td>
+                            <td>4.5 - 11.5</td>
+                        </tr>
+                        <tr>
+                            <td>
+                                White blood cells
+                            </td>
+                            <td>1.90</td>
+                            <td>K/uL</td>
+                            <td>4.5 - 11.5</td>
+                        </tr>
+                        <tr>
+                            <td>
+                                White blood cells
+                            </td>
+                            <td>1.90</td>
+                            <td>K/uL</td>
+                            <td>4.5 - 11.5</td>
+                        </tr>
+                    </tbody>
                 </table>
                 <!--end of second table-->
             </div>
@@ -173,22 +173,20 @@
                 <div class="row p-3">
                     <div class="col-md-6">
                         <div class="form-group">
-                            <input type="text">
-                            <br>
+                            <input type="text" />
+                            <br />
                             <label for="exampleFormControlSelect1">Pathologist</label>
                         </div>
                     </div>
                     <div class="col-md-6">
                         <div class="form-group for_consultant float-end">
-                            <input type="text">
-                            <br>
+                            <input type="text" />
+                            <br />
                             <label for="exampleFormControlSelect1">Consultant</label>
                         </div>
                     </div>
                 </div>
             </div>
-        </div>
-      </div>
-    </section>
-</body>
+        </section>
+    </body>
 </html>
