some code changes and update many section

--- a/form-three.html
+++ b/form-three.html
@@ -4,24 +4,28 @@
         <meta charset="UTF-8" />
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <link rel="stylesheet" href="./vendor/bootstrap/css/bootstrap.min.css" />
-        <link rel="stylesheet" href="./vendor/fontawesome//font-awesome-4.7.0/css/font-awesome.min.css" />
-        <link rel="stylesheet" href="./css/index.css" />
+        <link rel="stylesheet" href="./assets/vendor/bootstrap/css/bootstrap.min.css" />
+        <link rel="preconnect" href="https://fonts.googleapis.com" />
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+        <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@1,100&display=swap" rel="stylesheet" />
+        <link rel="stylesheet" href="./assets/css/custom.css" />
+        <link rel="stylesheet" href="./assets/css/media-query.css" />
+        <script src="./assets/vendor/jquery/jquery-3.6.0.min.js"></script>
         <title>Form Three</title>
     </head>
     <body>
         <!--Navbar start -->
-        <section>
+        <div>
             <nav class="navbar navbar-light bg_color shadow">
                 <div class="container">
                     <p class="mx-auto project_name">Hospital Name</p>
                 </div>
             </nav>
-        </section>
+        </div>
         <!-- Navbar end -->
         <!-- Page Content -->
         <section class="bg_body pt-3 pb-5 px-5">
-            <div class="container-fluid mb-3">
+            <div class="container-fluid mb-lg-4">
                 <div class="row bg_form">
                     <div class="col-md-12">
                         <form class="table_th mt-3">
@@ -29,33 +33,33 @@
                                 <thead>
                                     <tr>
                                         <td>Patient name:</td>
-                                        <th>
+                                        <td>
                                             <!-- <input type="text"> -->
-                                        </th>
-                                        <td scope="col">Patient ID:</td>
-                                        <th scope="col">
+                                        </td>
+                                        <td>Patient ID:</td>
+                                        <td>
                                             <!-- <input type="text"> -->
-                                        </th>
+                                        </td>
                                     </tr>
                                 </thead>
                                 <tbody>
                                     <tr>
-                                        <td scope="row">Patient Age:</td>
-                                        <td>
+                                        <td class="border-bottom-0">Patient Age:</td>
+                                        <td class="border-bottom-0">
                                             <!-- <input type="text"> -->
                                         </td>
-                                        <td>Mobile number:</td>
-                                        <td>
+                                        <td class="border-bottom-0">Mobile number:</td>
+                                        <td class="border-bottom-0">
                                             <!-- <input type="text"> -->
                                         </td>
                                     </tr>
                                     <tr>
-                                        <td scope="row">Gender:</td>
-                                        <td>
+                                        <td class="border-bottom-0">Gender:</td>
+                                        <td class="border-bottom-0">
                                             <!-- <input type="text"> -->
                                         </td>
-                                        <td>Consultant name:</td>
-                                        <td>
+                                        <td class="border-bottom-0">Consultant name:</td>
+                                        <td class="border-bottom-0">
                                             <!-- <input type="text"> -->
                                         </td>
                                     </tr>
@@ -80,38 +84,38 @@
                     </thead>
                     <tbody>
                         <tr>
-                            <td>
+                            <td class="border-bottom-0">
                                 White blood cells
                             </td>
-                            <td>
+                            <td class="border-bottom-0">
                                 1.90
                             </td>
-                            <td>K/uL</td>
-                            <td>4.5 - 11.5</td>
+                            <td class="border-bottom-0">K/uL</td>
+                            <td class="border-bottom-0">4.5 - 11.5</td>
                         </tr>
                         <tr>
-                            <td>
+                            <td class="border-bottom-0">
                                 White blood cells
                             </td>
-                            <td>1.90</td>
-                            <td>K/uL</td>
-                            <td>4.5 - 11.5</td>
+                            <td class="border-bottom-0">1.90</td>
+                            <td class="border-bottom-0">K/uL</td>
+                            <td class="border-bottom-0">4.5 - 11.5</td>
                         </tr>
                         <tr>
-                            <td>
+                            <td class="border-bottom-0">
                                 White blood cells
                             </td>
-                            <td>1.90</td>
-                            <td>K/uL</td>
-                            <td>4.5 - 11.5</td>
+                            <td class="border-bottom-0">1.90</td>
+                            <td class="border-bottom-0">K/uL</td>
+                            <td class="border-bottom-0">4.5 - 11.5</td>
                         </tr>
                         <tr>
-                            <td>
+                            <td class="border-bottom-0">
                                 White blood cells
                             </td>
-                            <td>1.90</td>
-                            <td>K/uL</td>
-                            <td>4.5 - 11.5</td>
+                            <td class="border-bottom-0">1.90</td>
+                            <td class="border-bottom-0">K/uL</td>
+                            <td class="border-bottom-0">4.5 - 11.5</td>
                         </tr>
                     </tbody>
                 </table>
@@ -131,58 +135,58 @@
                     </thead>
                     <tbody>
                         <tr>
-                            <td>
+                            <td class="border-bottom-0">
                                 White blood cells
                             </td>
-                            <td>
+                            <td class="border-bottom-0">
                                 1.90
                             </td>
-                            <td>K/uL</td>
-                            <td>4.5 - 11.5</td>
+                            <td class="border-bottom-0">K/uL</td>
+                            <td class="border-bottom-0">4.5 - 11.5</td>
                         </tr>
                         <tr>
-                            <td>
+                            <td class="border-bottom-0">
                                 White blood cells
                             </td>
-                            <td>1.90</td>
-                            <td>K/uL</td>
-                            <td>4.5 - 11.5</td>
+                            <td class="border-bottom-0">1.90</td>
+                            <td class="border-bottom-0">K/uL</td>
+                            <td class="border-bottom-0">4.5 - 11.5</td>
                         </tr>
                         <tr>
-                            <td>
+                            <td class="border-bottom-0">
                                 White blood cells
                             </td>
-                            <td>1.90</td>
-                            <td>K/uL</td>
-                            <td>4.5 - 11.5</td>
+                            <td class="border-bottom-0">1.90</td>
+                            <td class="border-bottom-0">K/uL</td>
+                            <td class="border-bottom-0">4.5 - 11.5</td>
                         </tr>
                         <tr>
-                            <td>
+                            <td class="border-bottom-0">
                                 White blood cells
                             </td>
-                            <td>1.90</td>
-                            <td>K/uL</td>
-                            <td>4.5 - 11.5</td>
+                            <td class="border-bottom-0">1.90</td>
+                            <td class="border-bottom-0">K/uL</td>
+                            <td class="border-bottom-0">4.5 - 11.5</td>
                         </tr>
                     </tbody>
                 </table>
                 <!--end of second table-->
             </div>
             <!--Pathologist and Consultant signature option-->
-            <div class="container-fluid bg_form pb-5">
-                <div class="row p-3">
+            <div class="container-fluid bg_form pb-5 p-0">
+                <div class="row p-3 signature-input">
                     <div class="col-md-6">
-                        <div class="form-group">
-                            <input type="text" />
+                        <div>
+                            <input class="mb-2" type="text" />
                             <br />
-                            <label for="exampleFormControlSelect1">Pathologist</label>
+                            <label>Pathologist</label>
                         </div>
                     </div>
                     <div class="col-md-6">
-                        <div class="form-group for_consultant float-end">
-                            <input type="text" />
+                        <div class="for_consultant float-end">
+                            <input class="mb-2" type="text" />
                             <br />
-                            <label for="exampleFormControlSelect1">Consultant</label>
+                            <label>Consultant</label>
                         </div>
                     </div>
                 </div>
