--- a/form-two.html
+++ b/form-two.html
@@ -6,16 +6,20 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <link rel="stylesheet" href="./assets/vendor/bootstrap/css/bootstrap.min.css" />
         <link rel="stylesheet" href="./assets/vendor/fontawesome//font-awesome-4.7.0/css/font-awesome.min.css" />
+        <link rel="preconnect" href="https://fonts.googleapis.com" />
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+        <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@1,100&display=swap" rel="stylesheet" />
         <link rel="stylesheet" href="./assets/css/custom.css" />
+        <link rel="stylesheet" href="./assets/css/media-query.css" />
         <script src="./assets/vendor/jquery/jquery-3.6.0.min.js"></script>
         <title>Form Two</title>
     </head>
     <body>
         <!--Navbar start -->
-        <section>
+        <div>
             <nav class="navbar navbar-light bg_color shadow">
                 <div class="sidebar-for-mobile">
-                    <a href="" id="menu-toggle" class="navbar-toggler" type="button">
+                    <a href="#" id="menu-toggle" class="navbar-toggler">
                         <span class="navbar-toggler-icon"></span>
                     </a>
                 </div>
@@ -23,7 +27,7 @@
                     <p class="mx-auto project_name">Hospital Name</p>
                 </div>
             </nav>
-        </section>
+        </div>
         <!-- Navbar end -->
         <!--sidebar for mobile version start-->
         <div id="wrapper" class="toggled sidebar-for-mobile sidebar_toggle">
@@ -51,27 +55,39 @@
             </div>
         </div>
         <!--sidebar for mobile version end-->
-        <section class="bg_body">
+        <div class="bg_body">
             <div class="container-fluid">
                 <div class="row px-3 py-3">
                     <!-- web sidebar start -->
                     <div class="col-md-2 for_sidebar">
                         <div class="sidebar_ul">
                             <ul class="pt-3">
-                                <li class="text-uppercase for_cbc">cbc</li>
-                                <li class="text-uppercase">rbs</li>
-                                <li>Chest X-Ray</li>
-                                <li>Ultrasound</li>
-                                <li class="text-uppercase">ecg</li>
-                                <li>CT Scan</li>
+                                <li>
+                                    <a href="#" class="text-uppercase for_cbc">cbc</a>
+                                </li>
+                                <li>
+                                    <a href="#" class="text-uppercase">rbs</a>
+                                </li>
+                                <li>
+                                    <a href="#">Chest X-Ray</a>
+                                </li>
+                                <li>
+                                    <a href="#">Ultrasound</a>
+                                </li>
+                                <li>
+                                    <a href="#" class="text-uppercase">ecg</a>
+                                </li>
+                                <li>
+                                    <a href="#">CT Scan</a>
+                                </li>
                             </ul>
                         </div>
                     </div>
                     <!--web sidebar end-->
                     <!--start Patient form-->
-                    <div class="col-md-10 form_fields">
+                    <div class="col-md-10 form_fields form-fields-two">
                         <div class="row bg_form mb-4 m-0">
-                            <div class="col-md-12 w-100">
+                            <div class="col-md-12 w-100 pt-lg-3">
                                 <div class="form-fields-container">
                                     <ul class="form-fields p-0">
                                         <li>Patient ID: <input type="text" /></li>
@@ -94,8 +110,8 @@
                             <textarea class="form-control text_box w-100" rows="11"></textarea>
                             <!--end text box-->
                             <!--comments section-->
-                            <div class="form-group mt-2">
-                                <label class="comments">Comments:</label>
+                            <div class="form-group mt-3">
+                                <label class="comments mb-2">Comments:</label>
                                 <div class="border p-2 for_list">
                                     <ul>
                                         <li class="mb-3">
@@ -109,40 +125,36 @@
                             </div>
                             <!--end comments section-->
                             <!--Report and check option-->
-                            <div class="container my-5 pt-5">
+                            <div class="container p-0 my-5 pt-5">
                                 <div class="row">
-                                    <div class="col-md-4 col_edit">
-                                        <div class="for_select">
-                                            <label>Report by</label>
-                                            <select class="form-select">
-                                                <option></option>
-                                                <option></option>
-                                                <option></option>
-                                                <option></option>
-                                                <option></option>
+                                    <div class="col col_edit">
+                                        <div class="form-group for_select">
+                                            <label class="mb-2">Report by</label>
+                                            <select class="form-select form-select-sm">
+                                                <option>Test</option>
+                                                <option>Test1</option>
+                                                <option>Test2</option>
                                             </select>
                                         </div>
                                     </div>
                                     <!--save and print btn-->
-                                    <div class="col-md-4 for_hide">
+                                    <div class="col for_hide">
                                         <div class="for_btn">
                                             <button type="button" class="btn btn-light">Save and Print</button>
                                         </div>
                                     </div>
                                     <!--save and print btn-->
-                                    <div class="col-md-4 col_modify">
-                                        <div class="form-group float-right for_select">
-                                            <label>Checked by</label>
-                                            <select class="form-select">
-                                                <option></option>
-                                                <option></option>
-                                                <option></option>
-                                                <option></option>
-                                                <option></option>
+                                    <div class="col col_modify">
+                                        <div class="form-group float-end for_select">
+                                            <label class="mb-2">Checked by</label>
+                                            <select class="form-select form-select-sm">
+                                                <option>Test</option>
+                                                <option>Test1</option>
+                                                <option>Test2</option>
                                             </select>
                                         </div>
                                     </div>
-                                    <!--save and print btn for mobile version-->
+                                    <!--save and print btn mobile version-->
                                     <div class="col-md-4 for_open">
                                         <div class="for_btn">
                                             <button type="button" class="btn btn-light">Save and Print</button>
@@ -156,7 +168,7 @@
                     </div>
                 </div>
             </div>
-        </section>
-        <script src="./assets/js/index.js"></script>
+        </div>
+        <script src="./assets/js/custom.js"></script>
     </body>
 </html>
