--- a/form.html
+++ b/form.html
@@ -6,9 +6,9 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <link rel="stylesheet" href="./assets/vendor/bootstrap/css/bootstrap.min.css" />
         <link rel="stylesheet" href="./assets/vendor/fontawesome//font-awesome-4.7.0/css/font-awesome.min.css" />
-        <link rel="preconnect" href="https://fonts.googleapis.com">
-        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-        <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@1,100&display=swap" rel="stylesheet">
+        <link rel="preconnect" href="https://fonts.googleapis.com" />
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+        <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@1,100&display=swap" rel="stylesheet" />
         <link rel="stylesheet" href="./assets/css/custom.css" />
         <link rel="stylesheet" href="./assets/css/media-query.css" />
         <script src="./assets/vendor/jquery/jquery-3.6.0.min.js"></script>
@@ -23,15 +23,13 @@
                         <span class="navbar-toggler-icon"></span>
                     </a>
                 </div>
-                <div class="container-fluid">
-                    <div class="search-hide p-lg-1">
-                        <label>Search ID</label>
-                        <div class="has-search">
-                            <span class="fa fa-search form-control-feedback"></span>
-                            <input type="text" class="form-control" />
-                        </div>
+                <p class="mx-auto project_name">Hospital Name</p>
+                <div class="search-hide">
+                    <label><small>Search ID</small></label>
+                    <div class="has-search input-group-sm">
+                        <span class="fa fa-search form-control-feedback"></span>
+                        <input type="text" class="form-control w-75" />
                     </div>
-                    <p class="mx-auto project_name">Hospital Name</p>
                 </div>
             </nav>
         </div>
@@ -62,7 +60,7 @@
             </div>
         </div>
         <!--sidebar for mobile version end-->
-        <section class="bg_body">
+        <div class="bg_body">
             <div class="container-fluid">
                 <div class="row px-md-3 py-4">
                     <!-- web sidebar start -->
@@ -97,9 +95,9 @@
                             <div class="col-md-12 w-100 pt-lg-3">
                                 <div class="form-fields-container">
                                     <ul class="form-fields p-0">
-                                        <li>Patient ID: <input class="input-field" type="text"/></li>
-                                        <li>Mobile number: <input type="text"/></li>
-                                        <li>Consultant name: <input type="text"/></li>
+                                        <li>Patient ID: <input class="input-field" type="text" /></li>
+                                        <li>Mobile number: <input type="text" /></li>
+                                        <li>Consultant name: <input type="text" /></li>
                                     </ul>
                                 </div>
                                 <div class="form-fields-container">
@@ -132,7 +130,7 @@
                                             1.90
                                         </td>
                                         <td>K/uL</td>
-                                        <td >4.5 - 11.5</td>
+                                        <td>4.5 - 11.5</td>
                                     </tr>
                                     <tr>
                                         <td>
@@ -166,8 +164,8 @@
                                 <div class="row">
                                     <div class="col col_edit">
                                         <div class="form-group for_select">
-                                            <label>Report by</label>
-                                            <select class="form-select">
+                                            <label class="mb-2">Report by</label>
+                                            <select class="form-select form-select-sm">
                                                 <option>Test</option>
                                                 <option>Test1</option>
                                                 <option>Test2</option>
@@ -183,8 +181,8 @@
                                     <!--save and print btn-->
                                     <div class="col col_modify">
                                         <div class="form-group float-end for_select">
-                                            <label>Checked by</label>
-                                            <select class="form-select">
+                                            <label class="mb-2">Checked by</label>
+                                            <select class="form-select form-select-sm">
                                                 <option>Test</option>
                                                 <option>Test1</option>
                                                 <option>Test2</option>
@@ -205,7 +203,7 @@
                     </div>
                 </div>
             </div>
-        </section>
+        </div>
         <script src="./assets/js/custom.js"></script>
     </body>
 </html>
