changes some code and some styles

--- a/form-two.html
+++ b/form-two.html
@@ -105,7 +105,7 @@
                             </div>
                         </div>
                         <!--end Patient form-->
-                        <div class="bg_form p-4">
+                        <div class="bg_form p-3">
                             <!--text box-->
                             <textarea class="form-control text_box w-100" rows="11"></textarea>
                             <!--end text box-->
@@ -130,7 +130,7 @@
                                     <div class="col col_edit">
                                         <div class="form-group for_select">
                                             <label class="mb-2">Report by</label>
-                                            <select class="form-select form-select-sm">
+                                            <select class="form-select form-select-sm w-75">
                                                 <option>Test</option>
                                                 <option>Test1</option>
                                                 <option>Test2</option>
@@ -147,7 +147,7 @@
                                     <div class="col col_modify">
                                         <div class="form-group float-end for_select">
                                             <label class="mb-2">Checked by</label>
-                                            <select class="form-select form-select-sm">
+                                            <select class="form-select form-select-sm w-75">
                                                 <option>Test</option>
                                                 <option>Test1</option>
                                                 <option>Test2</option>
