--- a/form-three.html
+++ b/form-three.html
@@ -25,11 +25,11 @@
         <!-- Navbar end -->
         <!-- Page Content -->
         <section class="bg_body pt-3 pb-5 px-5">
-            <div class="container-fluid mb-lg-4">
+            <div class="container-fluid mb-4">
                 <div class="row bg_form">
                     <div class="col-md-12">
-                        <form class="table_th mt-3">
-                            <table class="table">
+                        <form class="table_th p-2">
+                            <table class="table m-2">
                                 <thead>
                                     <tr>
                                         <td>Patient name:</td>
@@ -73,7 +73,7 @@
             <div class="bg_form p-3">
                 <h4 title="Biochemist Analyzer Report" class="text-center mt-2 mb-3">Biochemist Analyzer Report</h4>
                 <!--first table start-->
-                <table class="table result">
+                <table class="table table-modify">
                     <thead class="thead-light">
                         <tr>
                             <th scope="col">Test</th>
@@ -124,7 +124,7 @@
             <!--second table start-->
             <div class="bg_form p-3">
                 <h4 title="Blood Examination Report" class="text-center mb-3">Blood Examination Report</h4>
-                <table class="table result">
+                <table class="table table-modify">
                     <thead class="thead-light">
                         <tr>
                             <th scope="col">Test</th>
@@ -174,18 +174,16 @@
             </div>
             <!--Pathologist and Consultant signature option-->
             <div class="container-fluid bg_form pb-5 p-0">
-                <div class="row p-3 signature-input">
+                <div class="row p-3">
                     <div class="col-md-6">
-                        <div>
-                            <input class="mb-2" type="text" />
-                            <br />
+                        <div class="mt-5 pt-4">
+                            <div class="mb-2 signature-bottom"></div>
                             <label>Pathologist</label>
                         </div>
                     </div>
                     <div class="col-md-6">
-                        <div class="for_consultant float-end">
-                            <input class="mb-2" type="text" />
-                            <br />
+                        <div class="mt-5 pt-4 for_consultant">
+                            <div class="mb-2 signature-bottom"></div>
                             <label>Consultant</label>
                         </div>
                     </div>
