--- a/form-two.html
+++ b/form-two.html
@@ -11,7 +11,6 @@
         <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@1,100&display=swap" rel="stylesheet" />
         <link rel="stylesheet" href="./assets/css/custom.css" />
         <link rel="stylesheet" href="./assets/css/media-query.css" />
-        <script src="./assets/vendor/jquery/jquery-3.6.0.min.js"></script>
         <title>Form Two</title>
     </head>
     <body>
@@ -146,8 +145,8 @@
                                     <!--save and print btn-->
                                     <div class="col col_modify">
                                         <div class="form-group float-end for_select">
-                                            <label class="mb-2">Checked by</label>
-                                            <select class="form-select form-select-sm w-75">
+                                            <label class="mb-2 ms-5 check-by">Checked by</label>
+                                            <select class="form-select form-select-sm float-end w-75">
                                                 <option>Test</option>
                                                 <option>Test1</option>
                                                 <option>Test2</option>
@@ -169,6 +168,7 @@
                 </div>
             </div>
         </div>
+        <script src="./assets/vendor/jquery/jquery-3.6.0.min.js"></script>
         <script src="./assets/js/custom.js"></script>
     </body>
 </html>
