--- a/form.html
+++ b/form.html
@@ -89,22 +89,66 @@
                     </div>
                     <!--web sidebar end-->
                     <!--Patient details start-->
-                    <div class="col-md-10 form_fields">
-                        <div class="row bg_form mb-4 m-0">
+                    <div class="col-md-10">
+                        <!-- <div class="row bg_form mb-4 m-0">
                             <div class="col-md-12 w-100 pt-lg-3">
                                 <div class="form-fields-container">
-                                    <ul class="form-fields p-0 id-one">
+                                    <ul class="form-fields p-0">
                                         <li>Patient ID: <input class="input-field" type="text" /></li>
                                         <li>Mobile number: <input type="text" /></li>
                                         <li>Consultant name: <input type="text" /></li>
                                     </ul>
                                 </div>
                                 <div class="form-fields-container">
-                                    <ul class="form-fields p-0 id-two">
+                                    <ul class="form-fields p-0">
                                         <li>Patient name: <input type="text" /></li>
                                         <li>Patient age: <input type="text" /></li>
                                         <li>Gender: <input type="text" /></li>
                                     </ul>
+                                </div>
+                            </div>
+                        </div> -->
+                        <div class="container bg_form">
+                            <div class="row mb-2">
+                                <div class="col-md-6 col-sm-12">
+                                    <div class="w-100 ">
+                                        <label>Patient name: </label>
+                                        <input type="text" />
+                                    </div>
+                                </div>
+                                <div class="col-md-6 col-sm-12">
+                                    <div class="w-100">
+                                        <label>Patient ID: </label>
+                                        <input type="text" />
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="row mb-2">
+                                <div class="col-md-6 col-sm-12">
+                                    <div class="w-100">
+                                        <label>Patient name: </label>
+                                        <input type="text" />
+                                    </div>
+                                </div>
+                                <div class="col-md-6 col-sm-12">
+                                    <div class="w-100">
+                                        <label>Patient ID: </label>
+                                        <input type="text" />
+                                    </div>
+                                </div>
+                            </div>
+                              <div class="row">
+                                <div class="col-md-6 col-sm-12">
+                                    <div class="w-100">
+                                        <label>Patient name: </label>
+                                        <input type="text" />
+                                    </div>
+                                </div>
+                                <div class="col-md-6 col-sm-12">
+                                    <div class="w-100">
+                                        <label>Patient ID: </label>
+                                        <input type="text" />
+                                    </div>
                                 </div>
                             </div>
                         </div>
@@ -159,9 +203,9 @@
                             </table>
                             <!--end of table-->
                             <!--Report and check option-->
-                            <div class="container-fluid p-0 my-5 pt-5">
+                            <div class="container p-0 my-5 pt-5">
                                 <div class="row">
-                                    <div class="col col_edit">
+                                    <div class="col">
                                         <div class="form-group for_select">
                                             <label class="mb-2">Report by</label>
                                             <select class="form-select form-select-sm w-75">
@@ -178,10 +222,10 @@
                                         </div>
                                     </div>
                                     <!--save and print btn-->
-                                    <div class="col col_modify">
-                                        <div class="form-group for_select">
-                                            <label class="mb-2">Checked by</label>
-                                            <select class="form-select form-select-sm w-75">
+                                    <div class="col">
+                                        <div class="form-group for_select float-end">
+                                            <label class="mb-2 ms-5 check-by">Checked by</label>
+                                            <select class="form-select form-select-sm w-75 float-end">
                                                 <option>Test</option>
                                                 <option>Test1</option>
                                                 <option>Test2</option>
